--- a/pages/index.html
+++ b/pages/index.html
@@ -59,7 +59,7 @@
 	<div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
 	<!-- !PAGE CONTENT! -->
-	<div class="w3-main main" style="margin-left:300px">
+	<div class="w3-main" id="main" style="margin-left:300px">
 
 		<!-- Header -->
 		<header id="portfolio">
@@ -75,6 +75,8 @@
 				</div>
 			</div>
 		</header>
+
+		<div class="w3-container" id="grid-container"></div>
 
 		<!-- First Photo Grid-->
 		<!--
